fix white space footer About page; fix space between rating/avatar

--- a/src/style/_base.scss
+++ b/src/style/_base.scss
@@ -7,22 +7,24 @@
 }
 
 body {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh;
   font-family: $font-family;
   font-size: 18px;
   @media screen and (max-width: $breakpoint-mobile) {
     font-size: 12px;
   }
 }
-
 main {
- height: auto;
-  margin: 0 5vw 0;
+  height: auto;
   flex: 1 0 auto;
 }
 
-footer{
+#house{
+  margin: 0 5% 0;
+}
+footer {
   margin-top: auto;
 }
