--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -29,6 +29,7 @@
     justify-content: space-between;
     @media screen and (max-width: $breakpoint-mobile) {
       min-width: 45%;
+      text-transform: uppercase;
     }
     ul {
       width: 100%;
@@ -56,7 +57,7 @@
   &_section {
     width: auto;
     height: 225px;
-    margin: 0 5% 5%;
+    margin: 0 5% 2%;
     border-radius: $radius;
     background-color: $color-background;
     position: relative;
@@ -96,9 +97,15 @@
   padding: 3%;
   background-color: #f6f6f6;
   border-radius: $radius;
-  @include flex-row;
+  /*  @include flex-row;
+  flex-wrap: wrap;
+  justify-content: space-between; */
+  display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-between;
+  align-items: flex-start;
+  align-content: normal;
   @media screen and (max-width: $breakpoint-mobile) {
     flex-direction: column;
     align-items: center;
@@ -115,8 +122,13 @@
     margin: 0 0 5%;
     border-radius: $radius;
     color: $color-text;
-    display: flex;
     position: relative;
+    display: block;
+    flex-grow: 0;
+    flex-shrink: 1;
+    flex-basis: auto;
+    align-self: auto;
+    order: 0;
 
     &_image {
       width: 100%;
@@ -187,7 +199,7 @@
   &_title {
     z-index: 2;
     width: 100%;
-    height: 50px;
+    height: calc(50px + 1vh);
     @include flex-row;
     align-items: center;
     justify-content: space-between;
@@ -199,6 +211,7 @@
     border-bottom: 1px solid #ddd;
     @media screen and (max-width: $breakpoint-mobile) {
       width: 100%;
+      height: calc(30px + 2vh);
     }
     &--name {
       padding: 0 3% 0;
@@ -234,7 +247,6 @@
       animation: apparition 0.35s ease-in-out forwards;
     }
     &.close {
-      //opacity: 0;
       opacity: 1;
       animation: disparition 0.35s ease-in-out forwards;
     }
@@ -296,6 +308,7 @@
   }
   @include flex-column;
   &_rating {
+    min-width: 195px;
     width: 100%;
     @include flex-row;
     justify-content: space-between;
@@ -318,7 +331,7 @@
     font-size: 18px;
   }
   &_title {
-    font-size: 2em;
+    font-size: 1.7em;
     font-weight: $font-weight;
     margin: $margin;
     color: $color-primary;
@@ -350,7 +363,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-evenly;
     &--picture {
       border-radius: 50%;
       width: 8vw;
@@ -464,8 +477,7 @@
 .footer {
   flex-shrink: 0;
   width: 100%;
-  min-height: 25vh;
-  height: auto;
+  min-height: 30vh;
   margin-top: auto;
   background-color: $color-background;
   color: $color-text;
@@ -493,8 +505,17 @@
 }
 
 .about {
-  min-height: 70vh;
-  @media screen and (max-width: $breakpoint-mobile) {
-    min-height: 40vh;
+  min-height: calc(100vh - 35vh);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  &__content {
+    width: 100%;
+    min-height: 45vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    justify-content: space-evenly;
+    gap: 20px;
   }
 }
